--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,6 +25,26 @@ dev_dependencies:
     sdk: flutter
   very_good_analysis: ^3.0.1 
 
+
 flutter:
 
   uses-material-design: true
+
+  fonts:
+    - family: Helvetica Neue
+      fonts:
+        - asset: assets/font/HelveticaNeue/HelveticaNeue-Bold.otf
+          weight: 700
+        - asset: assets/font/HelveticaNeue/HelveticaNeue-Medium.otf
+          weight: 500
+        - asset: assets/font/HelveticaNeue/HelveticaNeue-Regular.otf
+          weight: 400
+        - asset: assets/font/HelveticaNeue/HelveticaNeue-RegularItalic.otf
+          weight: 400
+          style: italic
+        - asset: assets/font/HelveticaNeue/HelveticaNeue-Light.otf
+          weight: 300
+        - asset: assets/font/HelveticaNeue/HelveticaNeue-Ultralight.otf
+          weight: 200
+        - asset: assets/font/HelveticaNeue/HelveticaNeue-Thin.otf
+          weight: 100
