--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,6 +16,7 @@ dependencies:
   flutter_hooks: ^0.18.5+1
   hive_flutter: ^1.1.0
   hooks_riverpod: ^1.0.4
+  url_launcher: ^6.1.5
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
@@ -29,6 +30,9 @@ dev_dependencies:
 flutter:
 
   uses-material-design: true
+
+  assets:
+    - assets/icons/
 
   fonts:
     - family: Helvetica Neue
